# MiniOtter

./: .gitignore  LICENSE  Makefile  README.md  README_zh.md  pyproject.toml
backend/config/: default_config.yaml
backend/miniotter/: __init__.py  __main__.py  config.py  constants.py  exceptions.py
backend/miniotter/agents/: base.py  extension_agent.py  gui_agent.py  main_agent.py  registry.py  text_agent.py
backend/miniotter/app/: deps.py  event_bus.py  schemas.py  server.py  ws.py
backend/miniotter/app/routes/: chat.py  config.py  health.py  tasks.py
backend/miniotter/llm/: __init__.py  base.py  claude_provider.py  openai_provider.py  provider_factory.py  types.py
backend/miniotter/macos/: __init__.py  accessibility.py  input_control.py  permissions.py  screenshot.py
backend/miniotter/prompts/: __init__.py  extension_agent.py  gui_agent.py  main_agent.py  text_agent.py
backend/miniotter/react/: __init__.py  engine.py  history.py  loop.py  types.py
backend/miniotter/tools/: __init__.py  base.py  registry.py
backend/miniotter/tools/common/: __init__.py  finish.py
backend/miniotter/tools/gui/: __init__.py  accessibility.py  keyboard.py  mouse.py  screenshot.py
backend/miniotter/tools/text/: __init__.py  (+3 more)
docs/: architecture.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: chat.ts  config.ts  index.ts  types.ts
frontend/src/hooks/: useAutoScroll.ts  useWebSocket.ts
frontend/src/stores/: chatStore.ts  configStore.ts
frontend/src/styles/: global.css
(+10 files in other folders)
